# boiler-plate

./: README.md
Django-Boilerplate/: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
Django-Boilerplate/app1/migrations/: 0001_initial.py  0002_delete_test.py
Django-Boilerplate/project/: celery.py
Django-Boilerplate/project/settings/: __init__.py  base.py  local.py
